--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ lang: pt-PT
 title: BATIC
 description: Braille aplicado às TIC - subgrupo do Núcleo Braille e Meios Complementares de Leitura
 show_downloads: false
+github:
+  is_project_page: false
