--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-slate
 lang: pt-PT
 title: BATIC
-description: Braille aplicado às TIC - subgrupo do Núcleo Braille e Meios Complementares de Leitura
+subtitle: Braille aplicado às TIC
+description: subgrupo do Núcleo Braille e Meios Complementares de Leitura
 show_downloads: false
