--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-slate
 lang: pt-PT
-title: BATIC
-subtitle: Braille aplicado às TIC
+title: BATIC<br>Braille aplicado às TIC
 description: subgrupo do Núcleo Braille e Meios Complementares de Leitura
 show_downloads: false
