--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 lang: pt-PT
 title: BATIC<br>Braille aplicado às TIC
-description: subgrupo do Núcleo Braille e Meios Complementares de Leitura
+description: um subgrupo do <strong>Núcleo Braille e Meios Complementares de Leitura</strong>
 show_downloads: false
