--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 lang: pt-PT
 title: BATIC - Braille aplicado às TIC
-description: um subgrupo do <strong>Núcleo Braille e Meios Complementares de Leitura</strong>
+description: um subgrupo do <strong>Núcleo para o Braille e Meios Complementares de Leitura</strong>
 show_downloads: false
